app_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: appservice
  name: appservice
  namespace: app
spec:
  ports:
    # The port that this service should serve on.
    - port: 80
      targetPort: 5000
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    app: app
  type: LoadBalancer
